enigma core server side fixes, wrap text fixes (?)

--- a/css/main.css
+++ b/css/main.css
@@ -94,4 +94,5 @@ table{
 td{
 	border: 1px solid black;
 	white-space: pre-wrap;
+	white-space: pre-line;
 }
